org_unpackaged/standard/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountOwnerName__c</fullName>
        <formula>Account.Owner.FirstName + &apos; &apos; + Account.Owner.LastName</formula>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRecordType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <label>Account Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounttype__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Initial_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Initial Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Initial_Work_Order__c</fullName>
        <description>Is the stage of the initial work order of the record active</description>
        <formula>IF(
   ISPICKVAL( Account.Initial_Work_Order__r.StageName , &quot;Active&quot;),
   TRUE,
   FALSE
)</formula>
        <label>Active Initial Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alumni_Referrer__c</fullName>
        <label>Alumni Referrer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentLength__c</fullName>
        <inlineHelpText>In Months</inlineHelpText>
        <label>Estimated Length of 1st Assignment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Number__c</fullName>
        <label>Associate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Status__c</fullName>
        <label>Associate Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associate_Type__c</fullName>
        <label>Associate Service</label>
        <picklist>
            <picklistValues>
                <fullName>MBO Exec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Associate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AttributeAssociateNewsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Associate Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeHolidayGreeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Holiday Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeICB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Consultant Brief</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeIndustryConference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Industry Conferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeNetworkingEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Networking Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributePANews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Press Announcements/News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeSoI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute State of Independence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeWebinars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The attribute panel for this communication. True if the MBO Partners wants to send the record this type of communication.</description>
        <label>Attribute Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BM_Email__c</fullName>
        <formula>Business_Manager__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BM_FName__c</fullName>
        <formula>Business_Manager__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BM FName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BM_LName__c</fullName>
        <formula>Business_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BM LName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BM_TTLink__c</fullName>
        <formula>Business_Manager__r.TimeTrade_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BM TTLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Rate_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tracks if the Bill Rate API was submitted and the Pardot process was not completed.</inlineHelpText>
        <label>Bill Rate Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billings_to_Date__c</fullName>
        <label>Billings to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows the user to select the BM responsible for this record</description>
        <inlineHelpText>Reference the BM responsible for this record</inlineHelpText>
        <label>Business Manager</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>BM Associates</relationshipLabel>
        <relationshipName>BM_Associates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags the record if it has participated in a campaign</description>
        <inlineHelpText>The contact has participated in a campaign (Admin)</inlineHelpText>
        <label>Campaign Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientSpaceAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to identify any contact record that is to be a client space admin</description>
        <label>Client Space Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_status__c</fullName>
        <description>Displays the sales status of this records employer</description>
        <formula>TEXT(Account.Activity_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the sales status of this records employer</inlineHelpText>
        <label>Client status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is used to collect the comments from a lead from our website</description>
        <inlineHelpText>This is what this contact entered in the comment box on our site</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Used to determine where the contact is within our associate sales process</description>
        <inlineHelpText>Assign where the contact is within the sales process</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags the record if it has no phone number or email</description>
        <inlineHelpText>The contact has no phone or email (Admin)</inlineHelpText>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EM_Email__c</fullName>
        <formula>Enrollment_Manager__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_FName__c</fullName>
        <formula>Enrollment_Manager__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM FName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_LName__c</fullName>
        <formula>Enrollment_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM LName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_LinkedIn_Profile__c</fullName>
        <formula>Enrollment_Manager__r.LinkedIn_Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM LinkedIn Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM_TTLink__c</fullName>
        <formula>Enrollment_Manager__r.TimeTrade_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM TTLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <description>A second email field</description>
        <inlineHelpText>Secondary email</inlineHelpText>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <description>Off layout.  used as unique identifier from MyBiz.  Automatically updated based on Contact.Email</description>
        <inlineHelpText>The contacts primary email (Hidden)</inlineHelpText>
        <label>Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employed_at_consulting_or_staffing_firm__c</fullName>
        <label>Employed at consulting or staffing firm</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows the user to reference the enrollment code that is appropriate for the associate</description>
        <inlineHelpText>Please select the enrollment code this record should receive</inlineHelpText>
        <label>Enrollment Code</label>
        <referenceTo>Enrollment_Code__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows the user to reference the EM for this record</description>
        <inlineHelpText>Reference the EM for this record</inlineHelpText>
        <label>Enrollment Manager</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>EM Associates</relationshipLabel>
        <relationshipName>EM_Associates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enterprise_Associate_Suppression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Associate Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Anyone who wants to receive communication on MBO events will have this field as True</description>
        <inlineHelpText>True = opted in to receive MBO Event Communications</inlineHelpText>
        <label>Event Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedBilling__c</fullName>
        <label>Expected Billings 1st 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fit_for_auto_merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fit for auto-merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Source__c</fullName>
        <description>Used to store information about the form this record completed</description>
        <inlineHelpText>This is the form initially completed by this record</inlineHelpText>
        <label>Form Source</label>
        <picklist>
            <picklistValues>
                <fullName>Partners Talk To Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES Talk To Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is MBO Right For Me</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_College_Degree__c</fullName>
        <label>Has College Degree</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_LLC_or_S_Corp__c</fullName>
        <inlineHelpText>Has set up some sort of business structure</inlineHelpText>
        <label>Has Business Structure</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_need_for_business_insurance__c</fullName>
        <inlineHelpText>Interested in protecting their practice, not totally driven by a client requirement</inlineHelpText>
        <label>Seeking/Interested in Business Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <description>Allows the user to select how the record first heard about us</description>
        <inlineHelpText>Select how this record first heard about us</inlineHelpText>
        <label>How Did You Hear About Us?</label>
        <picklist>
            <picklistValues>
                <fullName>Referred by Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred by Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffing Industry Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Capital Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing Interest Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center for Human Capital Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar or Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News or Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouTube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zintro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Ad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Heard_AD__c</fullName>
        <description>Allows the user to enter how the record specifically heard of us</description>
        <inlineHelpText>Enter how the record specifically heard of us</inlineHelpText>
        <label>How Heard Additional Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <description>Admin field; used to identify where this record was imported from</description>
        <inlineHelpText>The code to identify where this contact was imported from (Admin)</inlineHelpText>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify old contacts</description>
        <inlineHelpText>Check this if the contact no longer works for this company</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Expected 1st Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSourceData__c</fullName>
        <inlineHelpText>More specific data on how the record was created</inlineHelpText>
        <label>Lead Source Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MBORecordId__c</fullName>
        <description>System field; used to link the MBO system to salesforce; contains ID field from Person table in MBO system.</description>
        <externalId>true</externalId>
        <inlineHelpText>System link (Admin)</inlineHelpText>
        <label>MBO Record Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBO_Email__c</fullName>
        <inlineHelpText>The email MBO has found</inlineHelpText>
        <label>MBO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MBO_ID__c</fullName>
        <externalId>true</externalId>
        <label>MBO ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MBO_Partners_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for the MBO Partners newsletter signup from the mbopartners.com website</description>
        <inlineHelpText>Flag for the MBO Partners newsletter signup from the mbopartners.com website</inlineHelpText>
        <label>MBO Partners Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBO_Phone__c</fullName>
        <inlineHelpText>The phone number MBO has found</inlineHelpText>
        <label>MBO Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MSP_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSP Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (MSP Client)</relationshipLabel>
        <relationshipName>MSP_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needs_Health_Benefits__c</fullName>
        <label>Seeking/Interested in Health Benefits</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_time_to_do_non_billable_work__c</fullName>
        <inlineHelpText>Too busy to have interest in/time to dedicate to back office administration</inlineHelpText>
        <label>No time to do non-billable work</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OptInAssociateNewsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for this communication. True if the record wants to receive communication about this.</description>
        <label>Opt-In Associate Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInConsultantBrief__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for this communication. True if the record wants to receive communication about this.</description>
        <label>Opt-In Consultant Brief</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInHolidayGreeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for this communication. True if the record wants to receive communication about this.</description>
        <label>Opt-In Holiday Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInIndustryConference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for this communication. True if the record wants to receive communication about this.</description>
        <label>Opt-In Industry Conferences</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInNetworkingEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for this communication. True if the record wants to receive communication about this.</description>
        <label>Opt-In Networking Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInPANews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for this communication. True if the record wants to receive communication about this.</description>
        <label>Opt-In Press Announcements/News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInSoI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for this communication. True if the record wants to receive communication about this.</description>
        <label>Opt-In State of Independence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OptInWebinars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The subscription panel for this communication. True if the record wants to receive communication about this.</description>
        <label>Opt-In Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>The email address of the owner of the record.</description>
        <formula>Owner.Email</formula>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <description>The first name of the owner of the record.</description>
        <formula>Owner.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Landing_Page__c</fullName>
        <description>The landing page URL of the owner of the record.</description>
        <formula>Owner.Landing_Page__c</formula>
        <label>Owner Landing Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <description>The last name of the owner of the record.</description>
        <formula>Owner.LastName</formula>
        <label>Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_LinkedIn__c</fullName>
        <description>The LinkedIn URL of the owner of the record.</description>
        <formula>Owner.LinkedIn_URL__c</formula>
        <label>Owner LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <description>The desk phone of the owner of the record.</description>
        <formula>Owner.Phone</formula>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Time_Trade__c</fullName>
        <description>The time trade URL of the owner of the record.</description>
        <formula>Owner.fs_tTLink__c</formula>
        <label>Owner Time Trade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <description>The title of the owner of the record.</description>
        <formula>Owner.Title</formula>
        <label>Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Qualifier_Grade__c</fullName>
        <label>Pardot Qualifier Grade</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Owner_Contact__c</fullName>
        <formula>IF(AND(ISPICKVAL(fs_direct__c, &quot;Exec-Associate&quot;),
        Billings_to_Date__c &gt; 100000
      ), 
   TRUE,
   FALSE
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_Grade__c</fullName>
        <formula>IF(
   AND(
       OR(ISPICKVAL(X75_hr_Bill_Rate__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Upcoming_Signing_Opportunity__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Requires_something_they_can_t_get__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(US_Based__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Sells_Services_to_Large_Businesses__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(No_time_to_do_non_billable_work__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(X6_Years_of_Experience__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Employed_at_consulting_or_staffing_firm__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Has_need_for_business_insurance__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Has_LLC_or_S_Corp__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Has_College_Degree__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Needs_Health_Benefits__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;))
      ),
   &apos;Unknown&apos;,
   IF(
      AND(
          ISPICKVAL(X75_hr_Bill_Rate__c,&apos;True&apos;),
          OR(
             ISPICKVAL(Upcoming_Signing_Opportunity__c,&apos;True&apos;),
             ISPICKVAL(Requires_something_they_can_t_get__c,&apos;True&apos;)
            ),
          ISPICKVAL(US_Based__c,&apos;True&apos;),
          OR(
             ISPICKVAL(Sells_Services_to_Large_Businesses__c,&apos;True&apos;),
             ISPICKVAL(No_time_to_do_non_billable_work__c,&apos;True&apos;),
             ISPICKVAL(X6_Years_of_Experience__c,&apos;True&apos;),
             ISPICKVAL(Employed_at_consulting_or_staffing_firm__c,&apos;True&apos;),
             ISPICKVAL(Has_need_for_business_insurance__c,&apos;True&apos;),
             ISPICKVAL(Has_College_Degree__c,&apos;True&apos;),
             ISPICKVAL(Has_LLC_or_S_Corp__c,&apos;True&apos;),
             ISPICKVAL(Needs_Health_Benefits__c,&apos;True&apos;)
            )
         ),
      &apos;A&apos;,
      IF(
         AND(
             ISPICKVAL(US_Based__c,&apos;True&apos;),
             OR(
                ISPICKVAL(Sells_Services_to_Large_Businesses__c,&apos;True&apos;),
                ISPICKVAL(No_time_to_do_non_billable_work__c,&apos;True&apos;),
                ISPICKVAL(X6_Years_of_Experience__c,&apos;True&apos;),
                ISPICKVAL(Employed_at_consulting_or_staffing_firm__c,&apos;True&apos;),
                ISPICKVAL(Has_need_for_business_insurance__c,&apos;True&apos;),
                ISPICKVAL(Has_College_Degree__c,&apos;True&apos;),
                ISPICKVAL(Has_LLC_or_S_Corp__c,&apos;True&apos;),
                ISPICKVAL(Needs_Health_Benefits__c,&apos;True&apos;)
               )
            ),
         &apos;B&apos;,
         &apos;C&apos;
        )
    )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Name__c</fullName>
        <formula>Referring_Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Referring Client)</relationshipLabel>
        <relationshipName>Referred_Associates</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>